--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -7,10 +7,45 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
+  initialize:
+    runs-on: macos-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Install xcodegen
+      run: brew install xcodegen
+
+    - name: Create Xcode Project
+      run: |
+        mkdir -p fokusapp/Sources
+        cd fokusapp
+        echo "name: fokusapp" > project.yml
+        echo "options:" >> project.yml
+        echo "  bundleIdPrefix: com.example" >> project.yml
+        echo "  deploymentTarget: '13.0'" >> project.yml
+        echo "targets:" >> project.yml
+        echo "  fokusapp:" >> project.yml
+        echo "    type: application" >> project.yml
+        echo "    platform: iOS" >> project.yml
+        echo "    sources: [Sources]" >> project.yml
+        echo "import UIKit" > Sources/AppDelegate.swift
+        echo "@UIApplicationMain" >> Sources/AppDelegate.swift
+        echo "class AppDelegate: UIResponder, UIApplicationDelegate {" >> Sources/AppDelegate.swift
+        echo "  var window: UIWindow?" >> Sources/AppDelegate.swift
+        echo "  func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {" >> Sources/AppDelegate.swift
+        echo "    return true" >> Sources/AppDelegate.swift
+        echo "  }" >> Sources/AppDelegate.swift
+        echo "}" >> Sources/AppDelegate.swift
+        xcodegen generate
+
   build:
     runs-on: macos-latest
+    needs: initialize
 
     steps:
     - name: Checkout code
@@ -26,8 +61,8 @@ jobs:
 
     - name: Install dependencies
       run: pod install
-      working-directory: .
+      working-directory: fokusapp
 
     - name: Build app
       run: xcodebuild -workspace fokusapp.xcworkspace -scheme fokusapp -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11,OS=14.5' build
-      working-directory: .
+      working-directory: fokusapp
