--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -45,6 +45,7 @@ jobs:
         echo "  }" >> Sources/AppDelegate.swift
         echo "}" >> Sources/AppDelegate.swift
         xcodegen generate
+      workiiing-directory: fokusapp
 
   build:
     runs-on: macos-latest
