--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -64,8 +64,8 @@ jobs:
 
     - name: Install dependencies
       run: pod install
-      working-directory: fokusapp/fokusapp
+      working-directory: fokusapp
 
     - name: Build app
       run: xcodebuild -workspace fokusapp.xcworkspace -scheme fokusapp -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 11,OS=14.5' build
-      working-directory: fokusapp/fokusapp
+      working-directory: fokusapp
